--- a/references.bib
+++ b/references.bib
@@ -219,6 +219,78 @@
   note         = {Accessed: 2025-06-04}
 }
 
+@misc{azureocr,
+  title = {Azure AI Vision OCR Documentation},
+  author = {Microsoft Azure},
+  year = {2024},
+  url = {https://learn.microsoft.com/en-us/azure/ai-services/computer-vision/overview-ocr},
+  note = {Accessed June 2025}
+}
+
+@article{ji2023survey,
+  title={Survey of Hallucination in Natural Language Generation},
+  author={Ji, Zhewei and Lee, Nayeon and Fries, Jason and Zhang, Tatsunori B. and Langlotz, Curtis P. and Shickel, Benjamin and Sendak, Mark P. and Ng, Andrew Y. and Beam, Andrew L.},
+  journal={arXiv preprint arXiv:2307.16863},
+  year={2023},
+  url = {https://arxiv.org/abs/2307.16863}
+}
+
+@misc{openai2024pricing,
+  title = {OpenAI API Pricing},
+  author = {OpenAI},
+  year = {2024},
+  url = {https://openai.com/pricing},
+  note = {Accessed June 2025}
+}
+
+@misc{bpodataentry,
+  title = {Data Entry Services Pricing Guide (BPO Benchmarks)},
+  author = {Flatworld Solutions},
+  year = {2023},
+  url = {https://www.flatworldsolutions.com/data-management/articles/data-entry-outsourcing-costs.php},
+  note = {Accessed June 2025}
+}
+
+@article{bengio1994learning,
+  title={Learning long-term dependencies with gradient descent is difficult},
+  author={Bengio, Yoshua and Simard, Patrice and Frasconi, Paolo},
+  journal={IEEE transactions on neural networks},
+  volume={5},
+  number={2},
+  pages={157--166},
+  year={1994},
+  publisher={IEEE}
+}
+
+@inproceedings{zaheer2020bigbird,
+  title={Big bird: Transformers for longer sequences},
+  author={Zaheer, Manzil and Guruganesh, Guru and Dubey, Avinava and Ainslie, Joshua and Alberti, Chris and Ontanon, Santiago and Pham, Philip and Ravula, Anirudh and Wang, Qifan and Yang, Li and Ahmed, Amr},
+  booktitle={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={17283--17297},
+  year={2020}
+}
+
+
+@inproceedings{lample2016neural,
+  title={Neural architectures for named entity recognition},
+  author={Lample, Guillaume and Ballesteros, Miguel and Subramanian, Sandeep and Kawakami, Kazuya and Dyer, Chris},
+  booktitle={Proceedings of NAACL-HLT},
+  pages={260--270},
+  year={2016}
+}
+
+
+
+@article{beltagy2020longformer,
+  title={Longformer: The long-document transformer},
+  author={Beltagy, Iz and Peters, Matthew E and Cohan, Arman},
+  journal={arXiv preprint arXiv:2004.05150},
+  year={2020}
+}
+
+
+
 
 
 
